# trezor-connect-rs

./: Cargo.toml  README.md  build.rs  functions-with-trezor.js  package-lock.json  package.json
examples/: bluetooth_connect.rs  get_address.rs  hidden_passphrase.rs  sign_message.rs  sign_transaction.rs  simple_api.rs
proto/: messages-bitcoin.proto  messages-common.proto  messages-management.proto  messages.proto  options.proto
src/: bitcoin_utils.rs  connected_device.rs  constants.rs  credential_store.rs  device_info.rs  error.rs  errors.rs  lib.rs  params.rs  passphrase.rs  psbt.rs  responses.rs  session_state.rs  trezor.rs  tx_verify.rs  ui_callback.rs
src/api/: account.rs  address.rs  broadcast.rs  coinjoin.rs  compose.rs  message.rs  mod.rs  public_key.rs  sign_tx.rs
src/compose/: dust.rs  mod.rs  sorting.rs  tryconfirmed.rs  weight.rs
src/compose/coinselect/: accumulative.rs  bnb.rs  finalize.rs  mod.rs  split.rs
src/device/: commands.rs  features.rs  mod.rs  trezor.rs
src/protocol/: chunk.rs  mod.rs
src/protocol/thp/: crypto.rs  decode.rs  encode.rs  handshake.rs  mod.rs  pairing.rs  pairing_messages.rs  state.rs
src/protocol/v1/: decode.rs  encode.rs  mod.rs
src/protos/: mod.rs
src/transport/: bluetooth.rs  callback.rs  mock.rs  mod.rs  session.rs  traits.rs  usb.rs
src/types/: bitcoin.rs  mod.rs  network.rs  path.rs
